--- a/client/templates/projects/project_page.html
+++ b/client/templates/projects/project_page.html
@@ -4,7 +4,7 @@
       <div class="alert alert-info">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         <strong>{{_ "Tip"}}!</strong>
-        {{_ "Sources, findings, risks, and measures can be reordered by drag and drop"}}.
+        {{_ "Sources and subjects can be reordered by drag and drop"}}.
       </div>
     {{/if}}
     {{#if item_is_edited}}
