--- a/client/templates/projects/project_report.html
+++ b/client/templates/projects/project_report.html
@@ -1,35 +1,8 @@
 <template name="projectReport">
   <div>
-    {{> projectMeasuresTable}}
-    {{> projectRisksTable}}
-    {{> projectFindingsTable}}
+    {{> projectSubjectsTable}}
     {{> projectSourcesTable}}
-    {{> projectChecklistsTables}}
   </div>
-</template>
-
-<template name="projectChecklistsTables">
-  {{#each checklists}}
-    <div class="grid-block">
-      <table class="table table-striped">
-        <caption>{{title}}</caption>
-        <thead>
-          <tr>
-            <th>{{_ "Title"}}</th>
-            <th>{{_ "Description"}}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each criteria}}
-            <tr>
-              <td>{{title}}</td>
-              <td>{{description}}</td>
-            </tr>
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
-  {{/each}}
 </template>
 
 <template name="projectSourcesTable">
@@ -60,82 +33,24 @@
   {{/if}}
 </template>
 
-<template name="projectFindingsTable">
-  {{#if has_findings}}
+<template name="projectSubjectsTable">
+  {{#if has_subjects}}
     <div class="grid-block">
       <table class="table table-striped">
-        <caption>{{_ "Findings"}}</caption>
+        <caption>{{_ "Subjects"}}</caption>
         <thead>
           <tr>
             <th>{{_ "Title"}}</th>
             <th>{{_ "Description"}}</th>
             <th>{{_ "Sources"}}</th>
-            {{#if has_checklists}}
-              <th>{{_ "Criteria"}}</th>
-            {{/if}}
           </tr>
         </thead>
         <tbody>
-          {{#each findings}}
+          {{#each subjects}}
             <tr>
               <td>{{title}}</td>
               <td>{{description}}</td>
-              <td>{{#each findingSources}}{{title}}<br>{{/each}}</td>
-              {{#if project_has_checklists}}
-                <td>{{#each findingCriteria}}{{title}}<br>{{/each}}</td>
-              {{/if}}
-            </tr>
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
-  {{/if}}
-</template>
-
-<template name="projectRisksTable">
-  {{#if has_risks}}
-    <div class="grid-block">
-      <table class="table table-striped">
-        <caption>{{_ "Risks"}}</caption>
-        <thead>
-          <tr>
-            <th>{{_ "Title"}}</th>
-            <th>{{_ "Description"}}</th>
-            <th>{{_ "Findings"}}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each risks}}
-            <tr>
-              <td>{{title}}</td>
-              <td>{{description}}</td>
-              <td>{{#each riskFindings}}{{title}}<br>{{/each}}</td>
-            </tr>
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
-  {{/if}}
-</template>
-
-<template name="projectMeasuresTable">
-  {{#if has_measures}}
-    <div class="grid-block">
-      <table class="table table-striped">
-        <caption>{{_ "Measures"}}</caption>
-        <thead>
-          <tr>
-            <th>{{_ "Title"}}</th>
-            <th>{{_ "Description"}}</th>
-            <th>{{_ "Risks"}}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each measures}}
-            <tr>
-              <td>{{title}}</td>
-              <td>{{description}}</td>
-              <td>{{#each measureRisks}}{{title}}<br>{{/each}}</td>
+              <td>{{#each subjectSources}}{{title}}<br>{{/each}}</td>
             </tr>
           {{/each}}
         </tbody>
