--- a/client/templates/projects/project_tabs.html
+++ b/client/templates/projects/project_tabs.html
@@ -7,18 +7,8 @@
         </a>
       </li>
       <li role="presentation">
-        <a href="#finding" aria-controls="findings" role="tab" data-toggle="tab">
-          {{_ "Findings"}} <span class="badge">{{findings_count}}</span>
-        </a>
-      </li>
-      <li role="presentation">
-        <a href="#risk" aria-controls="risks" role="tab" data-toggle="tab">
-          {{_ "Risks"}} <span class="badge">{{risks_count}}</span>
-        </a>
-      </li>
-      <li role="presentation">
-        <a href="#measure" aria-controls="measures" role="tab" data-toggle="tab">
-          {{_ "Measures"}} <span class="badge">{{measures_count}}</span>
+        <a href="#subject" aria-controls="subjects" role="tab" data-toggle="tab">
+          {{_ "Subjects"}} <span class="badge">{{subjects_count}}</span>
         </a>
       </li>
       <li role="presentation">
@@ -38,14 +28,8 @@
       <div role="tabpanel" class="tab-pane fade" id="source" aria-labelled-by="sources">
         {{> sourcesList}}
       </div>
-      <div role="tabpanel" class="tab-pane fade" id="finding" aria-labelled-by="findings">
-        {{> findingsList}}
-      </div>
-      <div role="tabpanel" class="tab-pane fade" id="risk" aria-labelled-by="risks">
-        {{> risksList}}
-      </div>
-      <div role="tabpanel" class="tab-pane fade" id="measure" aria-labelled-by="measures">
-        {{> measuresList}}
+      <div role="tabpanel" class="tab-pane fade" id="subject" aria-labelled-by="subjects">
+        {{> subjectsList}}
       </div>
       <div role="tabpanel" class="tab-pane fade" id="report" aria-labelled-by="measures">
         {{> projectReport}}
