--- a/client/templates/subjects/subject_edit.html
+++ b/client/templates/subjects/subject_edit.html
@@ -2,21 +2,10 @@
   <form name="subject" class="item-form form">
     {{> titleControl extendContext 'control_id' 'subject_title'}}
     {{> descriptionControl}}
-    <div class="form-group {{errorClass 'sources'}}">
-      <div class="controls">
-        <label for="sources">{{_ "Sources"}}</label>
-        <select name="sources" multiple="multiple" class="form-control source-select">
-          {{#each sources}}
-            <option selected="{{sourceIsSelected}}" value="{{_id}}">{{title}}</option>
-          {{/each}}
-        </select>
-        <span class="help-block">{{errorMessage 'sources'}}</span>
-      </div>
-    </div>
     <div class="form-group">
       <button type="submit" class="btn btn-primary submit">{{_ "OK"}}</button>
       <button type="button" class="btn btn-default cancel">{{_ "Cancel"}}</button>
-      {{#if hasNoRisks}}
+      {{#if hasNoSubjectSourceIds}}
         <a data-toggle="modal" class="btn btn-danger delete pull-right" href="#deleteSubject">
           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> {{_ "Delete"}}
         </a>
