--- a/client/templates/projects/project_tabs.html
+++ b/client/templates/projects/project_tabs.html
@@ -17,6 +17,16 @@
         </a>
       </li>
       <li role="presentation">
+        <a href="#metric" aria-controls="metrics" role="tab" data-toggle="tab">
+          {{_ "Metrics"}} <span class="badge">{{metrics_count}}</span>
+        </a>
+      </li>
+      <li role="presentation">
+        <a href="#measurement" aria-controls="measurements" role="tab" data-toggle="tab">
+          {{_ "Measurements"}} <span class="badge">{{measurements_count}}</span>
+        </a>
+      </li>
+      <li role="presentation">
         <a href="#report" aria-controls="report" role="tab" data-toggle="tab">
           {{_ "Report"}}
         </a>
@@ -38,6 +48,12 @@
       </div>
       <div role="tabpanel" class="tab-pane fade" id="subject_source_id" aria-labelled-by="subject_source_ids">
         {{> subjectSourceIdsList}}
+      </div>
+      <div role="tabpanel" class="tab-pane fade" id="metric" aria-labelled-by="metrics">
+        {{> metricsList}}
+      </div>
+      <div role="tabpanel" class="tab-pane fade" id="measurement" aria-labelled-by="metrics">
+        {{> measurementsList}}
       </div>
       <div role="tabpanel" class="tab-pane fade" id="report" aria-labelled-by="report">
         {{> projectReport}}
