Measurements don't have an author and can't be reordered.

--- a/client/templates/measurements/measurements_list.html
+++ b/client/templates/measurements/measurements_list.html
@@ -1,7 +1,7 @@
 <template name="measurementsList">
   <div class="sortable">
     {{#each measurements}}
-      {{> item}}
+      {{> measurement_item}}
     {{/each}}
   </div>
 </template>
