Get the target from the metric and make it editable.

--- a/client/templates/metrics/metrics_list.html
+++ b/client/templates/metrics/metrics_list.html
@@ -1,7 +1,11 @@
 <template name="metricsList">
   <div class="sortable">
     {{#each metrics}}
-      {{> item}}
+      {{#if item_is_edited}}
+        {{> metricEdit}}
+      {{else}}
+        {{> item}}
+      {{/if}}
     {{/each}}
   </div>
 </template>
