--- a/client/templates/measurements/measurement_item.html
+++ b/client/templates/measurements/measurement_item.html
@@ -1,8 +1,10 @@
 <template name="measurement_item">
-  <div class="item" id="{{_id}}">
+  <div class="item {{bg_class}}" id="{{_id}}">
     <div class="item-content">
-      <h3>{{title}} <span>{{description}}</span></h3>
-      {{> submittedDate}}
+      <p>
+        <h3>{{title}} <span>{{description}}</span></h3>
+        {{> submittedDate}}
+      </p>
     </div>
   </div>
 </template>
