--- a/client/templates/measurements/measurement_item.html
+++ b/client/templates/measurements/measurement_item.html
@@ -3,7 +3,7 @@
     <div class="item-content">
       <p>
         <h3>{{title}} <span>{{description}}</span></h3>
-        {{> submittedDate}}
+        {{> updatedDate}}
       </p>
     </div>
   </div>
