Add a type attribute to subjects so we can specify which metrics can measure which types of subject.

--- a/client/templates/subjects/subject_edit.html
+++ b/client/templates/subjects/subject_edit.html
@@ -2,6 +2,7 @@
   <form name="subject" class="item-form form">
     {{> titleControl extendContext 'control_id' 'subject_title'}}
     {{> descriptionControl}}
+    {{> subjectType}}
     <div class="form-group">
       <button type="submit" class="btn btn-primary submit">{{_ "OK"}}</button>
       <button type="button" class="btn btn-default cancel">{{_ "Cancel"}}</button>
