--- a/client/templates/subjects/subject_submit.html
+++ b/client/templates/subjects/subject_submit.html
@@ -2,6 +2,7 @@
   <form name="subject" class="item-form form">
     {{> titleControl control_id='subject_title' title='' kind='subject'}}
     {{> descriptionControl description='' kind='subject'}}
+    {{> subjectType}}
     <button type="submit" class="btn btn-primary submit">{{_ "OK"}}</button>
     {{#if has_subjects}}
       <button type="button" class="btn btn-default cancel">{{_ "Cancel"}}</button>
