--- a/client/templates/subject_metrics/subject_metrics_list.html
+++ b/client/templates/subject_metrics/subject_metrics_list.html
@@ -4,7 +4,7 @@
       {{#if item_is_edited}}
         {{> subjectMetricEdit}}
       {{else}}
-        {{> item}}
+        {{> subjectMetricItem}}
       {{/if}}
     {{/each}}
   </div>
