Metrics have no author.

--- a/client/templates/metrics/metrics_list.html
+++ b/client/templates/metrics/metrics_list.html
@@ -4,7 +4,7 @@
       {{#if item_is_edited}}
         {{> metricEdit}}
       {{else}}
-        {{> item}}
+        {{> metricItem}}
       {{/if}}
     {{/each}}
   </div>
