--- a/client/templates/metrics/metric_edit.html
+++ b/client/templates/metrics/metric_edit.html
@@ -1,8 +1,7 @@
 <template name="metricEdit">
   <form name="metric" class="item-form form">
-    {{> titleControl extendContext 'control_id' 'metric_title'}}
-    {{> descriptionControl}}
-    <div class="form-group">
+    <h3>{{title}} <span>{{description}}</span></h3>
+    <div class="form-group {{errorClass 'target'}}">
       <div class="controls">
         <label for="target">{{_ "Target"}}</label>
         <input type="number" name="target" id="metric_target" value="{{target}}">
