--- a/client/templates/subject_source_ids/subject_source_ids_list.html
+++ b/client/templates/subject_source_ids/subject_source_ids_list.html
@@ -8,7 +8,7 @@
         {{#if item_is_edited}}
           {{> subjectSourceIdEdit}}
         {{else}}
-          {{> item}}
+          {{> subjectSourceIdItem}}
         {{/if}}
       {{/each}}
     </div>
