--- a/client/templates/subject_source_ids/subject_source_id_edit.html
+++ b/client/templates/subject_source_ids/subject_source_id_edit.html
@@ -1,7 +1,13 @@
 <template name="subjectSourceIdEdit">
   <form name="subject_source_id" class="item-form form">
-    {{> titleControl extendContext 'control_id' 'subject_source_id_title'}}
-    {{> descriptionControl}}
+    <div class="form-group">
+      <div class="controls">
+        <label for="id">{{_ "Subject-source-id"}}</label>
+        <input name="id" id="id" type="text" value="{{id}}"
+               required="required"
+               placeholder="{{_ 'Subject-source-id'}}" class="form-control"/>
+      </div>
+    </div>
     <div class="form-group">
       <div class="controls">
         <label for="subject">{{_ "Subject"}}</label>
@@ -41,7 +47,7 @@
           <h4 class="modal-title">{{_ "delete_kind" translated_kind}}</h4>
         </div>
         <div class="modal-body">
-          <h4>{{title}}</h4>
+          <h4>{{id}}</h4>
           <p>{{description}}</p>
         </div>
         <div class="modal-footer">
