--- a/client/templates/subjects/subject_edit.html
+++ b/client/templates/subjects/subject_edit.html
@@ -1,6 +1,6 @@
 <template name="subjectEdit">
   <form name="subject" class="item-form form">
-    {{> titleControl extendContext 'control_id' 'subject_title'}}
+    {{> titleControl}}
     {{> descriptionControl}}
     {{> subjectType}}
     <div class="form-group">
