--- a/client/templates/includes/controls/description_control.html
+++ b/client/templates/includes/controls/description_control.html
@@ -2,8 +2,8 @@
   <div class="form-group">
     <div class="controls">
       <label for="description">{{_ "Description"}}</label>
-      <textarea name="description" id="{{control_id}}" class="form-control"
-                placeholder="{{_ 'description_placeholder' translated_kind}}"
+      <textarea name="description" class="form-control"
+                placeholder="{{_ 'Description'}}"
                 rows="3" value="{{description}}">{{description}}</textarea>
     </div>
   </div>
