--- a/client/templates/includes/controls/title_control.html
+++ b/client/templates/includes/controls/title_control.html
@@ -1,10 +1,10 @@
 <template name="titleControl">
-  <div class="form-group {{errorClass 'title'}}">
+  <div class="form-group">
     <div class="controls">
       <label for="title">{{_ "Title"}}</label>
-      <input name="title" id="{{control_id}}" type="text" value="{{title}}"
-             placeholder="{{_ 'title_placeholder' translated_kind}}" class="form-control"/>
-      <span class="help-block">{{errorMessage 'title'}}</span>
+      <input name="title" type="text" value="{{title}}"
+             class="form-control" required="required"
+             placeholder="{{_ 'Title'}}"/>
     </div>
   </div>
 </template>
