--- a/client/templates/includes/controls/url_control.html
+++ b/client/templates/includes/controls/url_control.html
@@ -1,10 +1,10 @@
 <template name="urlControl">
-  <div class="form-group {{errorClass 'url'}}">
+  <div class="form-group">
     <div class="controls">
       <label for="url">{{_ "URL"}}</label>
-      <input name="url" id="{{control_id}}" type="text" value="{{url}}"
-             placeholder="{{_ 'url_placeholder' translated_kind}}" class="form-control"/>
-      <span class="help-block">{{errorMessage 'url'}}</span>
+      <input name="url" type="text" value="{{url}}"
+             required="required" class="form-control"
+             placeholder="{{_ 'URL'}}"/>
     </div>
   </div>
 </template>
