--- a/client/templates/projects/project_edit.html
+++ b/client/templates/projects/project_edit.html
@@ -1,7 +1,7 @@
 <template name="projectEdit">
   <form name="project" class="main form">
-    {{> titleControl extendContext 'control_id' 'project_title'}}
-    {{> descriptionControl extendContext 'control_id' 'project_description'}}
+    {{> titleControl}}
+    {{> descriptionControl}}
     <div class="form-group {{errorClass 'members'}}">
       <div class="controls">
         <label for="members">{{_ "Project members"}}</label>
