--- a/client/templates/projects/project_new.html
+++ b/client/templates/projects/project_new.html
@@ -1,7 +1,7 @@
 <template name="projectNew">
   <form name="project" class="item-form form">
-    {{> titleControl control_id='project_title' title='' kind='project'}}
-    {{> descriptionControl control_id='project_description' description='' kind='project'}}
+    {{> titleControl}}
+    {{> descriptionControl}}
     <div class="form-group {{errorClass 'members'}}">
       <div class="controls">
         <label for="members">{{_ "Project members"}}</label>
