--- a/client/templates/sources/source_submit.html
+++ b/client/templates/sources/source_submit.html
@@ -1,9 +1,9 @@
 <template name="sourceSubmit">
   <form name="source" class="item-form form">
-    {{> titleControl control_id='source_title' title='' kind='source'}}
-    {{> descriptionControl description='' kind='source'}}
+    {{> titleControl extendContext 'title' ''}}
+    {{> descriptionControl extendContext 'description' ''}}
     {{> sourceType}}
-    {{> urlControl control_id='source_url' url='' kind='source'}}
+    {{> urlControl}}
     <button type="submit" class="btn btn-primary submit">{{_ "OK"}}</button>
     {{#if has_sources}}
       <button type="button" class="btn btn-default cancel">{{_ "Cancel"}}</button>
