Add duplication metric.

--- a/client/templates/measurements/measurement_item.html
+++ b/client/templates/measurements/measurement_item.html
@@ -2,7 +2,7 @@
   <div class="item {{bg_class}}" id="{{_id}}">
     <div class="item-content">
       <p>
-        <h3>{{metric_title}} {{subject_title}} <span>{{description}}</span></h3>
+        <h3>{{subject_title}} {{metric_title}} <span>{{description}}</span></h3>
         {{> updatedDate}}
       </p>
     </div>
