--- a/client/templates/subject_metrics/subject_metric_item.html
+++ b/client/templates/subject_metrics/subject_metric_item.html
@@ -1,7 +1,7 @@
 <template name="subjectMetricItem">
-  <div class="item" id="{{_id}}">
+  <div class="item {{bg_class}}" id="{{_id}}">
     <div class="item-content">
-      <h3>{{title}}</h3>
+      <h3>{{title}} <span>{{description}}</span></h3>
     </div>
     <button type="button" class="btn btn-default edit">
       <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{_ "Edit"}}
