--- a/client/templates/subject_source_ids/subject_source_id_edit.html
+++ b/client/templates/subject_source_ids/subject_source_id_edit.html
@@ -2,14 +2,6 @@
   <form name="subject_source_id" class="item-form form">
     <div class="form-group">
       <div class="controls">
-        <label for="id">{{_ "Subject-source-id"}}</label>
-        <input name="id" id="id" type="text" value="{{id}}"
-               required="required"
-               placeholder="{{_ 'Subject-source-id'}}" class="form-control"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="controls">
         <label for="subject">{{_ "Subject"}}</label>
         <select name="subject" class="form-control">
           {{#each subjects}}
@@ -21,11 +13,29 @@
     <div class="form-group">
       <div class="controls">
         <label for="source">{{_ "Source"}}</label>
-        <select name="source" class="form-control">
+        <select name="source" class="form-control source">
           {{#each sources}}
             <option selected="{{sourceIsSelected}}" value="{{_id}}">{{title}}</option>
           {{/each}}
         </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="controls">
+        <label for="data_type">{{_ "Data type"}}</label>
+        <select name="data_type" class="form-control">
+          {{#each data_types}}
+            <option selected="{{dataTypeIsSelected}}" value="{{_id}}">{{title}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="controls">
+        <label for="id">{{_ "Subject-source-id"}}</label>
+        <input name="id" id="id" type="text" value="{{id}}"
+               required="required"
+               placeholder="{{_ 'Subject-source-id'}}" class="form-control"/>
       </div>
     </div>
     <div class="form-group">
