--- a/client/templates/subject_source_ids/subject_source_id_item.html
+++ b/client/templates/subject_source_ids/subject_source_id_item.html
@@ -1,7 +1,7 @@
 <template name="subjectSourceIdItem">
   <div class="item" id="{{_id}}">
     <div class="item-content">
-      <h3>{{id}} <span>{{_ "Id of %s in %s" subject source}}</span></h3>
+      <h3>{{id}} <span>{{_ "Id of %s %s in %s" subject data_type source}}</span></h3>
     </div>
     <button type="button" class="btn btn-default edit">
       <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{_ "Edit"}}
