Get query results from Jira.

--- a/client/templates/sources/source_submit.html
+++ b/client/templates/sources/source_submit.html
@@ -4,6 +4,8 @@
     {{> descriptionControl extendContext 'description' ''}}
     {{> sourceType}}
     {{> urlControl}}
+    {{> usernameControl}}
+    {{> passwordControl}}
     <button type="submit" class="btn btn-primary submit">{{_ "OK"}}</button>
     {{#if has_sources}}
       <button type="button" class="btn btn-default cancel">{{_ "Cancel"}}</button>
