--- a/client/templates/sources/source_edit.html
+++ b/client/templates/sources/source_edit.html
@@ -4,6 +4,8 @@
     {{> descriptionControl}}
     {{> sourceType}}
     {{> urlControl}}
+    {{> usernameControl}}
+    {{> passwordControl}}
     <div class="form-group">
       <button type="submit" class="btn btn-primary submit">{{_ "OK"}}</button>
       <button type="button" class="btn btn-default cancel">{{_ "Cancel"}}</button>
