--- a/client/templates/subject_source_ids/data_type_select.html
+++ b/client/templates/subject_source_ids/data_type_select.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <div class="controls">
       <label for="data_type">{{_ "Data type"}}</label>
-      <select name="data_type" class="form-control">
+      <select name="data_type" class="form-control data_type">
         {{#each data_types}}
           <option selected="{{dataTypeIsSelected}}" value="{{_id}}">{{title}}</option>
         {{/each}}
