--- a/client/templates/subject_source_ids/id_input.html
+++ b/client/templates/subject_source_ids/id_input.html
@@ -1,10 +1,10 @@
 <template name="idInput">
   <div class="form-group">
     <div class="controls">
-      <label for="id">{{_ 'Subject-source-id'}}</label>
+      <label for="id">{{id_label}}</label>
       <input name="id" id="id" type="text" value="{{id}}"
              required="required"
-             placeholder="{{_ 'Subject-source-id'}}" class="form-control"/>
+             placeholder="{{id_label}}" class="form-control"/>
     </div>
   </div>
 </template>
