Add pie charts of metric statuses to subjects.

--- a/client/templates/subjects/subjects_list.html
+++ b/client/templates/subjects/subjects_list.html
@@ -7,7 +7,7 @@
       {{#if item_is_edited}}
         {{> subjectEdit}}
       {{else}}
-        {{> item}}
+        {{> subjectItem}}
       {{/if}}
     {{/each}}
   </div>
